Updated files - Ported to:     - 1.21.9-10     - 1.21.11 - Added support WASD for rotate camera - Added support Page Down/Up for zoom - Added a command to get ready-made heads, with textures and a name.

--- a/src/main/resources/assets/camera_head/lang/en_us.json
+++ b/src/main/resources/assets/camera_head/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "camera_head": "Camera Head",
+  "camera_head": "CamHeads",
   "camera_head.camera": "Camera",
   "camera_head.camera.empty": "No cameras are connected to this monitor!",
   "camera_head.camera.button": "Cam. #%s",
